<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="luzontuells.marvelmanager.activities.SecondActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/second_activity_icon_item"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.25"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <TextView
                android:id="@+id/second_activity_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/second_activity_item_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_name"
                android:text="Description" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/second_activity_links_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_activity_links"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/second_activity_button_detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_activity_button_detalle" />

        <Button
            android:id="@+id/second_activity_button_wiki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_activity_button_wiki" />

        <Button
            android:id="@+id/second_activity_button_comics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_activity_button_comics" />

    </LinearLayout>

    <TextView
        android:id="@+id/second_activity_recursos_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_activity_recursos"
        android:textSize="16dp" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/second_activity_recursos_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabLayout
            android:id="@+id/second_activity_recursos_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>

